<?xml version="1.0" encoding="UTF-8"?><!-- JBoss, Home of Professional Open Source Copyright 2012, Red Hat, Inc.
    and/or its affiliates, and individual contributors by the @authors tag. See
    the copyright.txt in the distribution for a full listing of individual contributors.
    Licensed under the Apache License, Version 2.0 (the "License"); you may not
    use this file except in compliance with the License. You may obtain a copy
    of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
    by applicable law or agreed to in writing, software distributed under the
    License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
    OF ANY KIND, either express or implied. See the License for the specific
    language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

  <groupId>org.jboss.as.tests</groupId>
  <artifactId>JBPAPP-10927</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <licenses>
      <license>
          <name>Apache License, Version 2.0</name>
          <distribution>repo</distribution>
          <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
      </license>
  </licenses>

  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>

		<downloadSources>true</downloadSources>

		<version.junit>4.10</version.junit>
		<version.org.apache.maven.plugins.maven-failsafe-plugin>2.15</version.org.apache.maven.plugins.maven-failsafe-plugin>
		<version.org.jboss.arquillian.arquillian-bom>1.1.1.Final</version.org.jboss.arquillian.arquillian-bom>
		<version.org.jboss.jbossas.jboss-server-manager>1.0.4.Final</version.org.jboss.jbossas.jboss-server-manager>
		<!--version.org.jboss.jbossas.jboss-server-manager>1.0.5-SNAPSHOT</version.org.jboss.jbossas.jboss-server-manager-->
		<version.org.slf4j>1.7.2</version.org.slf4j>
		<version.javax.xml.ws.jaxws-api>2.1</version.javax.xml.ws.jaxws-api>
		<version.org.jboss.arquillian.container.arquillian-jbossas-managed-5.1>1.0.0.CR3</version.org.jboss.arquillian.container.arquillian-jbossas-managed-5.1>
		<version.commons-io>2.4</version.commons-io>
		<version.org.apache.httpcomponents.httpclient>4.2.5</version.org.apache.httpcomponents.httpclient>

		<!--
		<jboss.home>${project.basedir}/target/jboss-eap-6.2</jboss.home>
		<jboss.overwrite-existing>false</jboss.overwrite-existing>
		<jboss.version>7.3.0.Final-redhat-4</jboss.version>< ! - - EAP-6.2.0.ER7 - - >
		 -->
  </properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${version.org.jboss.arquillian.arquillian-bom}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- test frameworks -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${version.junit}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${version.commons-io}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${version.org.apache.httpcomponents.httpclient}</version>
			<scope>test</scope>
		</dependency>

		<!-- arquillian -->
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.protocol</groupId>
			<artifactId>arquillian-protocol-servlet</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${version.org.slf4j}</version>
			<scope>test</scope>
		</dependency>


		<!-- WS -->
		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
			<version>${version.javax.xml.ws.jaxws-api}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>jbossas-managed-5.1</id>
			<activation>
				<property>
					<name>!no-jbossas-managed-5.1</name>
				</property>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-jbossas-managed-5.1</artifactId>
					<version>${version.org.jboss.arquillian.container.arquillian-jbossas-managed-5.1}</version>
					<exclusions>
						<exclusion>
							<groupId>apache-log4j</groupId>
							<artifactId>log4j</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.jboss.jbossas</groupId>
					<artifactId>jboss-server-manager</artifactId>
					<version>${version.org.jboss.jbossas.jboss-server-manager}</version>
				</dependency>
				<dependency>
					<groupId>org.jboss.jbossas</groupId>
					<artifactId>jboss-as-client</artifactId>
					<version>5.1.0.GA</version>
					<type>pom</type>
					<exclusions>
						<exclusion>
							<groupId>trove</groupId>
							<artifactId>trove</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.jboss.jbossas</groupId>
					<artifactId>jboss-as-profileservice-client</artifactId>
					<version>6.0.0.Final</version>
					<type>pom</type>
				</dependency>
			</dependencies>
		</profile>
<!--
		<profile>
			<id>download-eap-from-maven-repo</id>
			<activation>
				<property>
					<name>!jboss.home</name>
				</property>
			</activation>
			<properties>
				<jboss.major_minor>6.2</jboss.major_minor>
				<jboss.home>${project.build.directory}/jboss-eap-${jboss.major_minor}</jboss.home>
			</properties>
			<repositories>
				<repository>
					<id>EAP latest repository</id>
					<url>http://download.lab.bos.redhat.com/brewroot/repos/jb-eap-6-rhel-6-build/latest/maven/</url>
				</repository>
			</repositories>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.8</version>
						<executions>
							<execution>
								<id>unpack</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>unpack</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.jboss.as</groupId>
											<artifactId>jboss-as-dist</artifactId>
											<version>${jboss.version}</version>
											<type>zip</type>
											<overWrite>${jboss.overwrite-existing}</overWrite>
											<outputDirectory>${project.build.directory}</outputDirectory>
										</artifactItem>
									</artifactItems>
									<silent>false</silent>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
 -->
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${version.org.apache.maven.plugins.maven-failsafe-plugin}</version>
				<executions>
					<execution>
						<id>managed-junit</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<systemProperties>
								<jboss.home>${jboss.home}</jboss.home>
							</systemProperties>
							<includes>
								<include>**/*IT.java</include>
							</includes>

							<argLine>-Djava.endorsed.dirs=${jboss.as.home}/lib/endorsed</argLine>
							<additionalClasspathElements>
								<additionalClasspathElement>${jboss.as.home}/client/jbossall-client.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jbossws-native-core.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jbossws-native-client.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jbossws-spi.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jbossws-native-jaxrpc.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jbossws-common.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/jboss-xml-binding.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/mail.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/wsdl4j.jar</additionalClasspathElement>
								<additionalClasspathElement>${jboss.as.home}/client/wstx.jar</additionalClasspathElement>
							</additionalClasspathElements>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<repositories>
	<!--
		<repository>
			<id>EAP latest repository</id>
			<url>http://download.lab.bos.redhat.com/brewroot/repos/jb-eap-6-rhel-6-build/latest/maven/</url>
		</repository>
	 -->
		<repository>
			<id>JBoss repository</id>
			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>
</project>
